[package]
name = "makefun"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "get a fun string"
repository = "https://github.com/iujakchu/makefun"
homepage = "https://crates.io/crates/makefun"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
